# test_task_django_rocketdata

./: .dockerignore  .env  .flake8  .gitignore  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
docker/: Dockerfile  docker-compose.yml
docs/: api_endpoints.md  installation.md  structure.md
init/: admin.py  models.py  tasks.py  urls.py  views.py
init/api/: authentication.py  permissions.py  serializers.py  urls.py  views.py
init/management/commands/: test_data.py
init/migrations/: 0001_initial.py  0002_auto_20250409_1523.py
init/templates/init/: nodes_list.html
