[project]
name = "test-task-django-rocketdata"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry",email = "kiselevdv1991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=3.2,<4.0)",
    "djangorestframework (>=3.12,<4.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "celery (>=5.2,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
flake8 = "^7.2.0"
